--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "todo"
+path = "bin/todo.rs"
+
 [dependencies]
 diesel = { version = "1.0.0", features = ["sqlite"] }
