--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,5 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-chrono = { version = "0.4.11", features = ["serde"] }
-diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
-rocket = "0.4.2"
-serde = { version = "1.0", features = ["derive"] }
-
-[dependencies.rocket_contrib]
-version = "0.4.2"
-default-features = false
-features = ["json"]
+[workspace]
+members = ["backend"]
