--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+todo-web = { path = ".." }
+seed = "=0.4.1"
+wasm-bindgen = "=0.2.50"
+web-sys = "^0.3.27"
