--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [workspace]
 members = ["backend", "frontend"]
+
+[dependencies]
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4.11", features = ["serde"] }
+diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
