--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,11 +15,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - uses: jetli/wasm-pack-action@v0.3.0
+      with:
+        # Optional version of wasm-pack to install(eg. 'v0.9.1', 'latest')
+        version: 'latest'
     - uses: davidB/rust-cargo-make@v1
       with:
         version: '0.23.0'
     - uses: actions/checkout@v3
     - name: Build
       run: cargo make
+
     - name: Run tests
       run: cargo test
