--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,3 +14,4 @@ seed = "=0.4.1"
 wasm-bindgen = "=0.2.50"
 web-sys = "^0.3.27"
 futures = "^0.1.28"
+chrono = { version = "0.4.11", features = ["serde"] }
