--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -15,3 +15,4 @@ wasm-bindgen = "=0.2.50"
 web-sys = "^0.3.27"
 futures = "^0.1.28"
 chrono = { version = "0.4.11", features = ["serde"] }
+indexmap = "1.9.1"
