--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -16,3 +16,4 @@ web-sys = "^0.3.27"
 futures = "^0.1.28"
 chrono = { version = "0.4.11", features = ["serde"] }
 indexmap = "1.9.1"
+itertools = "0.10.4"
