--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -10,8 +10,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 todo-web = { path = ".." }
-seed = "=0.4.1"
-wasm-bindgen = "=0.2.50"
+seed = "0.9.2"
+wasm-bindgen = "0.2.83"
 web-sys = "^0.3.27"
 futures = "^0.1.28"
 chrono = { version = "0.4.11", features = ["serde"] }
